# code-reviewer

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
example/: calculator.py
openspec/changes/add-posthog-analytics/: tasks.md
openspec/changes/add-text-quality-review/: proposal.md  tasks.md
openspec/changes/archive/2026-02-05-code-reviewer-cli-mvp/: tasks.md
openspec/changes/archive/2026-02-05-enhanced-cli-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-05-fix-copilot-runner-availability/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-05-multilingual-review-messages/: design.md  proposal.md
openspec/changes/archive/2026-02-05-upgrade-cli-runners/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-add-text-quality-review/: design.md
openspec/changes/archive/2026-02-10-enhance-review-quality/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-10-fix-diff-context-understanding/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-27-fix-copilot-stdin/: design.md
openspec/changes/archive/2026-03-03-add-posthog-analytics/: design.md  proposal.md
openspec/changes/archive/2026-03-03-improve-description-input-ux/: design.md  proposal.md  tasks.md
openspec/changes/code-reviewer-cli-mvp/: design.md  proposal.md  tasks.md
openspec/changes/code-reviewer-cli-mvp/specs/ai-runner/: spec.md
openspec/changes/code-reviewer-cli-mvp/specs/diff-parsing/: spec.md
openspec/changes/code-reviewer-cli-mvp/specs/terminal-output/: spec.md
openspec/changes/fix-copilot-stdin/: proposal.md  tasks.md
openspec/changes/fix-copilot-stdin/specs/ai-runner/: spec.md
openspec/changes/fix-i18n-bundle/: design.md  proposal.md  tasks.md
openspec/changes/fix-i18n-bundle/specs/i18n-packaging/: spec.md
openspec/changes/multilingual-review-messages/: tasks.md
openspec/changes/show-deps-flag/: design.md  proposal.md  tasks.md
openspec/specs/ai-runner/: spec.md
openspec/specs/breaking-change-detection/: spec.md
openspec/specs/context-backtracking/: spec.md
openspec/specs/description-input/: spec.md
openspec/specs/good-practices/: spec.md
openspec/specs/i18n/: spec.md
openspec/specs/prompt-building/: spec.md
openspec/specs/response-parsing/: spec.md
openspec/specs/terminal-output/: spec.md
openspec/specs/usage-analytics/: spec.md
src/code_reviewer/: __init__.py  cli.py  context_builder.py  description_input.py  diff_parser.py  models.py  prompt_builder.py  response_parser.py
src/code_reviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/code_reviewer/analytics/: __init__.py  client.py  identity.py
src/code_reviewer/formatters/: __init__.py  progress.py  terminal.py
src/code_reviewer/i18n/: __init__.py
src/code_reviewer/locales/: en.yaml  pt-br.yaml
src/code_reviewer/prompts/: review_system.md
src/code_reviewer/runners/: __init__.py  base.py  copilot.py  gemini.py
tests/: __init__.py  test_analytics_client.py  test_analytics_identity.py  test_analytics_init.py  test_cli.py  test_context_builder.py  test_copilot_runner.py  test_description_input.py  test_diff_parser.py  test_i18n.py  test_progress.py  test_prompt_builder.py  test_response_parser.py  test_terminal_formatter.py
(+18 files in other folders)
