[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airev"
dynamic = ["version"]
description = "CLI tool for AI-powered code review with context backtracking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tarcisio", email = "tarcisiojunior@gmail.com"}
]
keywords = ["code-review", "ai", "cli", "git", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "python-semantic-release>=9.0",
]

[project.scripts]
airev = "code_reviewer.cli:main"

[tool.setuptools.dynamic]
version = {attr = "code_reviewer.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
code_reviewer = ["prompts/*.md", "locales/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Configuração do Semantic Release
[tool.semantic_release]
version_toml = []
version_variables = ["src/code_reviewer/__init__.py:__version__"]
branch = "main"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
build_command = "python -m build"
upload_to_pypi = true

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
